--- a/views/login.html
+++ b/views/login.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Simple Chat</title>
+    <title>Simple Blog</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-
 <body class="my-login-page"  style="padding-top: 135px">
 <section class="h-100">
     <div class="container h-100">
@@ -14,25 +13,25 @@
             <div class="card-wrapper">
                 <div class="card fat">
                     <div class="card-body">
-                        <h4 class="card-title">Login</h4>
+                        <h4 class="card-title">Увійти в профіль</h4>
                         <form class="my-login-validation" novalidate="">
                             <div class="form-group">
-                                <label for="email">E-Mail Address</label>
+                                <label for="email">E-Mail адреса</label>
                                 <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
                             </div>
 
                             <div class="form-group">
-                                <label for="password">Password</label>
+                                <label for="password">Пароль</label>
                                 <input id="password" type="password" class="form-control" name="password" required data-eye>
                             </div>
 
                             <div class="form-group m-0">
                                 <button type="submit" class="btn btn-primary btn-block">
-                                    Login
+                                    Увійти
                                 </button>
                             </div>
                             <div class="mt-4 text-center">
-                                Don't have an account? <a href="http://aboyko.shpp.me:3435/register">Create One</a>
+                                Не маєте аккаунта? <a href="/register">Створити</a>
                             </div>
                         </form>
                     </div>
@@ -47,6 +46,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
+  const host = 'http://localhost:3000'
   $(function() {
     $(".my-login-page").on('submit', (event) => {
       event.preventDefault();
@@ -58,7 +58,7 @@
 
       const config = {
         method: 'post',
-        url: 'http://aboyko.shpp.me:3435/auth/sign-in',
+        url: `${host}/auth/sign-in`,
         headers: {
           'Content-Type': 'application/json'
         },
@@ -70,7 +70,8 @@
           if (res.status === 200) {
             localStorage.setItem('accessToken', res.data.accessToken);
             localStorage.setItem('refreshToken', res.data.refreshToken);
-            $(location).prop('href', 'http://aboyko.shpp.me:3435/posts');
+            localStorage.setItem('firstName', res.data.firstName);
+            $(location).prop('href', `${host}/posts`);
           }
         })
         .catch(function (error) {
