--- a/views/register.html
+++ b/views/register.html
@@ -51,6 +51,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
+  const host = 'http://localhost:3000';
   $(function() {
     $(".my-login-page").on('submit', (event) => {
       event.preventDefault();
@@ -63,7 +64,7 @@
 
       const config = {
         method: 'post',
-        url: 'http://aboyko.shpp.me:3435/auth/sign-up',
+        url: `${host}/auth/sign-up`,
         headers: {
           'Content-Type': 'application/json'
         },
@@ -72,7 +73,7 @@
 
       axios(config)
         .then(() => {
-          $(location).prop('href', 'http://aboyko.shpp.me:3435/login');
+          $(location).prop('href', `${host}/login`);
         })
         .catch(function (error) {
           console.log(error);
