hotfix: views hostname change

--- a/views/blog.html
+++ b/views/blog.html
@@ -271,7 +271,7 @@
 }
 </style>
 <script>
-  const host = "http://localhost:3000";
+  const host = "http://aboyko.shpp.me:3000";
 
   async function logout() {
     const config = {
