--- a/views/login.html
+++ b/views/login.html
@@ -46,7 +46,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  const host = 'http://localhost:3000'
+  const host = 'http://aboyko.shpp.me:3000';
+  
   $(function() {
     $(".my-login-page").on('submit', (event) => {
       event.preventDefault();
