--- a/views/index.html
+++ b/views/index.html
@@ -127,8 +127,8 @@
   <nav class="navbar fixed-top navbar-light bg-light">
     <a class="navbar-brand" href="#">Simple Blog</a>
     <form id="navLoggedOut" class="form-inline">
-      <a class="btn btn-outline-success mr-sm-2" type="button" href="http://localhost:3000/login">Увійти</a>
-      <a class="btn btn-outline-secondary my-2 my-sm-0" type="button" href="http://localhost:3000/register">Зареєструватись</a>
+      <a class="btn btn-outline-success mr-sm-2" type="button" href="http://aboyko.shpp.me:3000/login">Увійти</a>
+      <a class="btn btn-outline-secondary my-2 my-sm-0" type="button" href="http://aboyko.shpp.me:3000/register">Зареєструватись</a>
     </form>
     <form id="navLoggedIn" class="form-inline" style="display: none;">
       <span class="navbar-brand" id="nickname"></span>
