--- a/views/login.html
+++ b/views/login.html
@@ -6,10 +6,10 @@
     <title>Simple Blog</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body class="my-login-page"  style="padding-top: 135px">
+<body class="my-login-page" style="padding-top: 135px">
 <section class="h-100">
     <div class="container h-100">
-        <div class="row justify-content-md-center h-100">
+        <div class="row justify-content-center h-100">
             <div class="card-wrapper">
                 <div class="card fat">
                     <div class="card-body">
@@ -24,14 +24,13 @@
                                 <label for="password">Пароль</label>
                                 <input id="password" type="password" class="form-control" name="password" required data-eye>
                             </div>
-
                             <div class="form-group m-0">
                                 <button type="submit" class="btn btn-primary btn-block">
                                     Увійти
                                 </button>
                             </div>
                             <div class="mt-4 text-center">
-                                Не маєте аккаунта? <a href="/register">Створити</a>
+                                Не маєте облікового запису? <a href="/register">Створити</a>
                             </div>
                         </form>
                     </div>
@@ -40,13 +39,13 @@
         </div>
     </div>
 </section>
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  const host = 'http://aboyko.shpp.me:3000';
+  const host = 'http://aboyko.shpp.me:3000'; 
+  // const host = 'http://localhost:3000';
   
   $(function() {
     $(".my-login-page").on('submit', (event) => {
@@ -67,16 +66,20 @@
       };
 
       axios(config)
-        .then(function (res) {
+        .then((res) => {
           if (res.status === 200) {
             localStorage.setItem('accessToken', res.data.accessToken);
             localStorage.setItem('refreshToken', res.data.refreshToken);
             localStorage.setItem('firstName', res.data.firstName);
-            $(location).prop('href', `${host}/posts`);
+            $(location).prop('href', `${host}/`);
           }
         })
-        .catch(function (error) {
-          console.log(error);
+        .catch((error) => {
+          if(error.response.status === 401) {
+            alert("Incorrect login or password");
+          } else {
+            console.log(error);
+          }
         });
     })
   });
