--- a/views/register.html
+++ b/views/register.html
@@ -13,31 +13,31 @@
             <div class="card-wrapper">
                 <div class="card fat">
                     <div class="card-body">
-                        <h4 class="card-title">Register</h4>
+                        <h4 class="card-title">Зареєструватися</h4>
                         <form method="POST" class="my-login-validation" novalidate="">
                             <div class="form-group">
-                                <label for="name">Name</label>
+                                <label for="name">Ім'я</label>
                                 <input id="name" type="text" class="form-control" name="name" required autofocus>
                             </div>
 
                             <div class="form-group">
-                                <label for="email">E-Mail Address</label>
+                                <label for="email">E-Mail адреса</label>
                                 <input id="email" type="email" class="form-control" name="email" required>
                             </div>
 
                             <div class="form-group">
-                                <label for="password">Password</label>
+                                <label for="password">Пароль</label>
                                 <input id="password" type="password" class="form-control" name="password" required data-eye>
                             </div>
 
 
                             <div class="form-group m-0">
                                 <button type="submit" class="btn btn-primary btn-block">
-                                    Register
+                                    Зареєструватись
                                 </button>
                             </div>
                             <div class="mt-4 text-center">
-                                Already have an account? <a href="http://aboyko.shpp.me:3435/login">Login</a>
+                                Вже маєте свій обліковий запис? <a href="/login">Увійти</a>
                             </div>
                         </form>
                     </div>
@@ -52,6 +52,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
   const host = 'http://aboyko.shpp.me:3000';
+  // const host = 'http://localhost:3000';
   $(function() {
     $(".my-login-page").on('submit', (event) => {
       event.preventDefault();
