fix: navbar padding and removed unnecessary routes

--- a/views/index.html
+++ b/views/index.html
@@ -326,6 +326,9 @@
       img {
         width: 80%;
       }
+      .navbar {
+        padding: 0 5px 0 5px;
+      }
     }
 
     @media only screen and (max-width: 290px) {
