--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
 <body class="my-login-page" style="padding-top: 135px">
 <section class="h-100">
     <div class="container h-100">
-        <div class="row justify-content-md-center h-100">
+        <div class="row justify-content-center h-100">
             <div class="card-wrapper">
                 <div class="card fat">
                     <div class="card-body">
