--- a/views/index.html
+++ b/views/index.html
@@ -159,7 +159,7 @@
       <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Create new post</h5>
+            <h5 class="modal-title">Створити нову публікацію</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
