--- a/views/index.html
+++ b/views/index.html
@@ -10,13 +10,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <title>Simple Blog</title>
 </head>
@@ -144,15 +139,18 @@
         <button class="btn btn-outline-danger mr-sm-2" type="button" onclick="logout();">Вийти</button>
       </form>
     </nav>
+    <!-- Button trigger modal -->
+    <button id="createPostBtn" type="button" class="btn btn-success" data-toggle="modal" data-target="#createPostModal">
+      Створити публікацію
+    </button>
     <div class="col justify-content-center" id="mother-col">
-      <div class="card" id="posts">
-        <!-- Button trigger modal -->
-        <button id="createPostBtn" type="button" class="btn btn-success" data-toggle="modal"
-          data-target="#createPostModal">
-          Створити публікацію
-        </button>
+      <div class="card">
+        <div id="posts">
+          
+        </div>
+        <div class="btn-group" role="group" id="pages"></div>
       </div>
-      <div id="pages"></div>
+      
     </div>
     <!-- Modal -->
     <div class="modal fade" id="createPostModal" data-backdrop="static" tabindex="-1" role="dialog" aria-hidden="true">
@@ -187,10 +185,17 @@
         </div>
       </div>
     </div>
+    <footer class="text-center p-3 text-white" style="background-color: rgba(0, 0, 0, 0.6);">
+      Проєкт розроблений <a class="text-white text-decoration-none" href="https://github.com/SaNch0sE">студентом</a>
+      <a class="text-white font-weight-bold" href="http://kik-cntu.kr.ua/">ВСП "КІФК ЦНТУ"</a><br>
+      <p>Copyright 2021</p>
+    </footer>
   </div>
   <style>
-    #mother-col {
-      margin-top: 5rem;
+    #createPostBtn {
+      margin-top: 5em;
+      display: block;
+      width: 100%;
     }
 
     #nickname {
@@ -277,6 +282,12 @@
       animation-timing-function: ease-in-out;
     }
 
+    #pages {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
+
     @keyframes draw {
       to {
         stroke-dashoffset: 0;
@@ -311,6 +322,7 @@
       }
 
       #createPostBtn {
+        margin-top: 5em;
         display: block;
         width: 100%;
       }
@@ -332,7 +344,7 @@
     }
 
     @media only screen and (max-width: 290px) {
-      #mother-col {
+      #createPostBtn {
         margin-top: 8rem;
       }
 
@@ -425,8 +437,8 @@
           currentPage += 1;
           if (currentPage > 0) {
             $('#pages').append(`
-              <form  id="backPage">
-                <input type="submit" value="Повернутися" class="btn btn-lite">
+              <form id="backPage">
+                <input type="submit" value="Повернутися" class="btn btn-secondary">
               </form>
             `)
           }
@@ -438,8 +450,8 @@
           currentPage -= 1;
           if (currentPage > 0) {
             $('#pages').append(`
-              <form  id="backPage">
-                <input type="submit" value="Повернутися" class="btn btn-lite">
+              <form id="backPage">
+                <input type="submit" value="Повернутися" class="btn btn-secondary">
               </form>
             `)
           }
@@ -737,8 +749,8 @@
         const postValue = await countPosts();
         if (postValue > 2) {
           $('#pages').append(`
-        <form  id="nextPage">
-          <input type="submit" value="Далі" class="btn btn-lite">
+        <form id="nextPage">
+          <input type="submit" value="Далі" class="btn btn-secondary">
         </form>
       `)
         }
@@ -746,5 +758,4 @@
     });
   </script>
 </body>
-
 </html>
