fix: fixed nav margins

--- a/views/index.html
+++ b/views/index.html
@@ -192,8 +192,11 @@
     </footer>
   </div>
   <style>
+    nav {
+      margin-bottom: 5em;
+    }
+
     #createPostBtn {
-      margin-top: 5em;
       display: block;
       width: 100%;
     }
@@ -313,18 +316,16 @@
         background-image: linear-gradient(to bottom right, #06A1C4, #CE1B5F);
       }
 
+      nav {
+        margin-bottom: 8em;
+      }
+
       #bg {
         display: none;
       }
 
       #posts {
         display: contents;
-      }
-
-      #createPostBtn {
-        margin-top: 5em;
-        display: block;
-        width: 100%;
       }
 
       .container {
